--- a/front_end/03_bootstrap/index.html
+++ b/front_end/03_bootstrap/index.html
@@ -1,6 +1,6 @@
 <!-- https://getbootstrap.com/ -->
 
-<!-- Shif  Alt  F  ( para identar o codigo ) -->
+<!--    Shif  Alt  F  ( para identar o codigo ) -->
 <!doctype html>
 <!-- Ligua da pagina -->
 <html lang="pt-br">
@@ -66,16 +66,145 @@
     <div class="container">
         <h1>Formulário</h1>
         <hr>
+        <h3>Dados pessoais</h3>
+        <hr>
+
         <form action="" method="">
-            <!-- criar linha ( row ) -->
+            <!-- criar campos do formulario ( row ) -->
             <div class="row">
+                <!-- parametros para dimencionar o tamanho dos campos na tela -->
                 <div class="col-12 col-md-6 col-lg-8">
                     <div class="input-group mb-3">
                         <span class="input-group-text" id="inputGroup-sizing-default">Informe seu Nome</span>
                         <input type="text" class="form-control" aria-label="Sizing example input"
                             aria-describedby="inputGroup-sizing-default">
                     </div>
-
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="inputGroup-sizing-default">CPF</span>
+                        <input type="text" class="form-control" aria-label="Sizing example input"
+                            aria-describedby="inputGroup-sizing-default">
+                    </div>
+                </div>
+            </div>
+            <!-- FIM DA PRIMEIRA LINHA ROW -->
+            <!-- INICIO DA PROXIMA LINHA -->
+            <div class="row">
+                <div class="col-12 col-md-12 col-lg-4">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="inputGroup-sizing-default">Telefone</span>
+                        <input type="text" class="form-control" aria-label="Sizing example input"
+                            aria-describedby="inputGroup-sizing-default">
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="inputGroup-sizing-default">Data de Nasc</span>
+                        <input type="date" class="form-control" aria-label="Sizing example input"
+                            aria-describedby="inputGroup-sizing-default">
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="input-group mb-3">
+                        <label class="input-group-text" for="inputGroupSelect01">Gênero</label>
+                        <select class="form-select" id="inputGroupSelect01">
+                            <option selected>Escolha...</option>
+                            <option value="1">Macho</option>
+                            <option value="2">Fêmea</option>
+                            <option value="3">Indefinido</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <!-- FIM DA SEGUNDA ROW -->
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="inputGroup-sizing-default">Email</span>
+                        <input type="text" class="form-control" aria-label="Sizing example input"
+                            aria-describedby="inputGroup-sizing-default">
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="input-group mb-3">
+                        <label class="input-group-text" for="inputGroupSelect01">Escolaridade</label>
+                        <select class="form-select" id="inputGroupSelect01">
+                            <option selected>Escolha...</option>
+                            <option value="1">Fundamental</option>
+                            <option value="2">Médio</option>
+                            <option value="3">Superior</option>
+                            <option value="4">Mestrado</option>
+                            <option value="5">Doutorado</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <!-- FIM DA TERCEIRA LINHA -->
+            <!-- campos de endereço -->
+            <h3>Endereço</h3>
+            <hr class="mr-5">
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="inputGroup-sizing-default">CEP</span>
+                        <input type="text" class="form-control" aria-label="Sizing example input"
+                            aria-describedby="inputGroup-sizing-default">
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="inputGroup-sizing-default">Estado</span>
+                        <input type="text" class="form-control" aria-label="Sizing example input"
+                            aria-describedby="inputGroup-sizing-default">
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-5">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="inputGroup-sizing-default">Cidade</span>
+                        <input type="text" class="form-control" aria-label="Sizing example input"
+                            aria-describedby="inputGroup-sizing-default">
+                    </div>
+                </div>
+            </div>
+            <!-- FIM DA ROU - NOVA LINHA ABAIXO -->
+            <div class="row">
+                <div class="col-12 col-md-12 col-lg-5">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="inputGroup-sizing-default">Bairro</span>
+                        <input type="text" class="form-control" aria-label="Sizing example input"
+                            aria-describedby="inputGroup-sizing-default">
+                    </div>
+                </div>
+                <div class="col-12 col-md-8 col-lg-5">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="inputGroup-sizing-default">Logradouro</span>
+                        <input type="text" class="form-control" aria-label="Sizing example input"
+                            aria-describedby="inputGroup-sizing-default">
+                    </div>
+                </div>
+                <div class="col-12 col-md-4 col-lg-2">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="inputGroup-sizing-default">Num</span>
+                        <input type="text" class="form-control" aria-label="Sizing example input"
+                            aria-describedby="inputGroup-sizing-default">
+                    </div>
+                </div>
+            </div>
+            <!-- NOVA ROW , QUE OCUPA TODA A LINHA -->
+            <div class="row">
+                <div class="col-12">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="inputGroup-sizing-default">Complemento</span>
+                        <input type="text" class="form-control" aria-label="Sizing example input"
+                            aria-describedby="inputGroup-sizing-default">
+                    </div>
+                </div>
+            </div>
+            <!-- ROW PARA BOTÃO -->
+            <div class="row">
+                <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+                    <button type="button" class="btn btn-primary">Enviar</button>
                 </div>
             </div>
 
@@ -83,7 +212,6 @@
     </div>
 
     <!-- FIM CONTAINER -->
-
 
     <!-- todo conteudo deve ficar acima do SCRIPT - DENTRO DO BODY -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
